src/infrastructure/deployments/guardian/promotion/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kargo
  labels:
    app.kubernetes.io/name: kargo
    app.kubernetes.io/part-of: guardian
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
