src/infrastructure/deployments/guardian/promotion/pipe-to-remote-box-nightly-promoter.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pipe-to-remote-box-nightly-promoter
  namespace: guardian-products
  labels:
    app.kubernetes.io/name: pipe-to-remote-box-nightly-promoter
    app.kubernetes.io/part-of: guardian
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pipe-to-remote-box-nightly-promoter
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tenant-root
            k8s:app.kubernetes.io/name: vminsert
      toPorts:
        - ports:
            - port: "8480"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: tenant-root-vminsert-from-pipe-to-remote-box-nightly-promoter
  labels:
    app.kubernetes.io/part-of: guardian
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: tenant-root
      k8s:app.kubernetes.io/name: vminsert
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: guardian-products
            k8s:app.kubernetes.io/name: pipe-to-remote-box-nightly-promoter
      toPorts:
        - ports:
            - port: "8480"
              protocol: TCP
